# vendas-cli

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/core/: __init__.py  cli.py  types.py
src/core/commands/: sales.py
src/output/: functions.py
src/parser/: extract.py  schema.py
tests/fixtures/: cli.py  parser.py
tests/unit/: test_cli.py  test_cli_group.py  test_commands_sales.py  test_extract.py  test_functions.py  test_main_module.py
