[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "vendas_cli"
version = "0.1.0"
description = "CLI Gerador de Relatório de Vendas Avançado"
dependencies = [
    "pytest>=8.4.2",
    "tabulate>=0.9.0"
]

[project.scripts]
vendas-cli = "main:main"
